# rmus

./: Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  event.rs  main.rs
src/sources/: local.rs  mod.rs
src/ui/: center_panel.rs  left_panel.rs  log_panel.rs  mod.rs  right_panel.rs  widget.rs
