[package]
name = "rmus"
version = "0.1.0"
description = "Music Player TUI"
authors = ["Maximilian PINDER-WHITE <mpinderwhite@proton.me>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
lofty = "0.22.4"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
